--- a/guess.html
+++ b/guess.html
@@ -20,7 +20,7 @@
 
 <body>
 	<h1>Guess The Number</h1>
-	<p>Guess the number between 1 to 100. You have 3 chances to guess the random number. See if you can guess it correctly!</p>
+	<p>Guess the number between 1 to 100. See if you can guess it correctly!</p>
 
 	<div class="form">
 		<label for="guessField">Enter a guess: </label>
