--- a/guess.html
+++ b/guess.html
@@ -1,66 +1,138 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Guess the number!</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Guess The Number Game</title>
 
-	<style>
-		html {
-			font-family: sans-serif;
-		}
-
-		body {
-			width: 50%;
-			max-width: 800px;
-			min-width: 480px;
-			margin: 0 auto;
-		}
-	</style>
+  <style>
+    html {
+    font-family: sans-serif;
+    }
+    
+    body {
+    width: 50%;
+    max-width: 800px;
+    min-width: 480px;
+    margin: 0 auto;
+    }
+  </style>
 </head>
-
 <body>
-	<h1>Guess The Number</h1>
-	<p>Guess the number between 1 to 100. See if you can guess it correctly!</p>
+  
+  <h1>Guess The Number Game!</h1>
+  <p>Guess the number between 1 to 100. See if you can guess it correctly in 5 tries!</p>
 
-	<div class="form">
-		<label for="guessField">Enter a guess: </label>
-		<input type="text" id="guessField" class="guessField">
-		<input type="submit" value="Submit guess" class="guessSubmit" id="submitguess">		
-	</div>
+  <div class="form">
+    <label for="guessField">Enter a guess: </label>
+    <input type="number" id="guessField" class="guessField" onfocus="this.value=''">
+    <input type="submit" value="Submit guess" class="guessSubmit" id="submitguess" onclick="contGame();">
+    <input type="reset" id="resetBtn" value="New Game" onclick="newGame();" disabled>
+  </div>
 
-	<script type="text/javascript">
+  <!--Guess count-->
+  <p>Number of guess : <span id="guessCount">0</span></p>
 
-// Create a random value to be generated
-	var y = Math.floor(Math.random() * 100 + 1);
+  <!--Message area-->
+  <p id="guessResult"></p>
 
-// number of guesses made
-// number made for the correct guess
-	var guess = 1;
+  <script type="text/javascript">
 
-	document.getElementById("submitguess").onclick = function(){
-		// number guessed by player
-		var x = document.getElementById("guessField").value;
+  // number made for the correct guess
+  var guess = 0;
 
-		if(x == y) {
-			alert ("Congratulations! You guess it right with " + guess + " guesses! Nice try!");
-		}
+  // Create a random value to be generated
+  var y = Math.floor(Math.random() * 100 + 1);
 
-		else if (x > y) /* if the guessed number is greater than actual number */
-		{
-			guess++;
-			alert("OOps, Sorry! Try a smaller number");
-		}
+  // Clean up the code by putting it as a function
+  function contGame(){
 
-		else
-		{
-			guess++;
-			alert("OOps, Sorry! Try a greater number")
-		}
-	}
+    // number guessed by player
+    var x = document.getElementById("guessField").value;
+
+    // Checking if the user did not enter a guess
+    if(x.length == 0) {
+      document.getElementById('guessResult').innerHTML = ("Field is blank. Please enter a guess");
+    } 
+
+    // Check if the guess is correct
+    else if(x == y) {
+      guess++;
+      document.getElementById('guessCount').innerHTML = guess;
+      document.getElementById('guessResult').innerHTML = ("Congratulations! You guess it right with " + guess + " guesses! Nice try!");
+
+      // Disabled the field and submit button but enabled the reset button
+      document.getElementById("resetBtn").disabled = false;
+      document.getElementById("guessField").disabled = true;
+      document.getElementById("submitguess").disabled = true;
+    } 
+
+    // Check if the user enter 0 or value more than 100
+    else if(x > 100 || x == 0) {
+      document.getElementById('guessResult').innerHTML = ("Please guess a number between 1 and 100");
+    }
+
+    // Check if we have made 5 guesses
+    else if(guess < 5)
+    {
+      if (x > y) /* if the guessed number is greater than actual number */
+      {
+        guess++;
+
+        // Update user the number of guessess
+        document.getElementById('guessCount').innerHTML = guess;
+        document.getElementById('guessResult').innerHTML = ("Hint : OOps, Sorry! Try a smaller number");
+        document.getElementById("guessField").value = "";
+      } 
+      
+      else
+      {
+        guess++;
+
+        // Update user the number of guessess
+        document.getElementById('guessCount').innerHTML = guess;
+        document.getElementById('guessResult').innerHTML = ("Hint : OOps, Sorry! Try a greater number");
+        document.getElementById("guessField").value = "";
+      }
+
+      // If we have made 5 guesses, tell the user
+      if(guess == 5) {
+        document.getElementById('guessResult').innerHTML = ("5 guesses have been made. Please try again!");
+        document.getElementById("resetBtn").disabled = false;
+        document.getElementById("guessField").disabled = true;
+        document.getElementById("submitguess").disabled = true;
+        document.getElementById("guessField").value = "";
+      }
+
+    }
+  }
+
+// To start new game if 5 tries is exhausted! Hope you don't mind me adding this for the fun of the game...
+
+  function newGame() {
+    // Clear the stat for a new game when hitting the Reset button
+    document.getElementById("guessCount").innerHTML = 0;
+    document.getElementById("guessResult").innerHTML = "";
+    document.getElementById("guessField").value = "";
+
+    // Enable the field and submit button but disabled the reset button
+    document.getElementById("resetBtn").disabled = true;
+    document.getElementById("guessField").disabled = false;
+    document.getElementById("submitguess").disabled = false;
 
 
-</script>
+    y = Math.floor(Math.random() * 100 + 1);
 
+    guess = 0;
+
+    console.log(y);
+  }
+
+  console.log(y);
+
+  // Ash so stress looking for the right one have to check how other games worked in the website to get it right and how i think it should be! -- sakit otak sir, hope this is right!
+  </script>
 
 </body>
 </html>
